RESOLVED FIXED217862
Web Inspector: REGRESSION(r266074): line-based JavaScript breakpoints don't hit after reload
https://bugs.webkit.org/show_bug.cgi?id=217862
Summary Web Inspector: REGRESSION(r266074): line-based JavaScript breakpoints don't h...
Devin Rousso
Reported 2020-10-16 18:38:15 PDT
# STEPS TO REPRODUCE 1. inspect <https://webkit.org> 2. set a breakpoint inside the `DOMContentLoaded` event listener callback in `global.js` 3. reload the page # EXPECTED pause # ACTUAL no-pause, and the breakpoint shows as unresolved
Attachments
Patch (6.69 KB, patch)
2020-10-16 20:11 PDT, Devin Rousso
no flags
Devin Rousso
Comment 1 2020-10-16 20:11:16 PDT
EWS
Comment 2 2020-10-16 21:07:27 PDT
Committed r268629: <https://trac.webkit.org/changeset/268629> All reviewed patches have been landed. Closing bug and clearing flags on attachment 411646 [details].
Radar WebKit Bug Importer
Comment 3 2020-10-16 21:08:18 PDT
Ryan Haddad
Comment 4 2020-10-19 13:34:39 PDT
inspector/debugger/breakpoint-resolve-when-script-added.html, added with this change, is frequently timing out on macOS debug bots. https://results.webkit.org/?suite=layout-tests&test=inspector%2Fdebugger%2Fbreakpoint-resolve-when-script-added.html
Ryan Haddad
Comment 5 2020-10-19 13:42:47 PDT
(In reply to Ryan Haddad from comment #4) > inspector/debugger/breakpoint-resolve-when-script-added.html, added with > this change, is frequently timing out on macOS debug bots. > > https://results.webkit.org/?suite=layout- > tests&test=inspector%2Fdebugger%2Fbreakpoint-resolve-when-script-added.html Marked the test as slow in https://trac.webkit.org/changeset/268684/webkit
Blaze Burg
Comment 6 2020-10-19 15:12:20 PDT
*** Bug 216807 has been marked as a duplicate of this bug. ***
Ryan Haddad
Comment 7 2020-10-19 17:01:49 PDT
(In reply to Ryan Haddad from comment #4) > inspector/debugger/breakpoint-resolve-when-script-added.html, added with > this change, is frequently timing out on macOS debug bots. > > https://results.webkit.org/?suite=layout- > tests&test=inspector%2Fdebugger%2Fbreakpoint-resolve-when-script-added.html My statement was incorrect, this is also affecting release bots. Devin, can you investigate this urgently or should we revert for now?
Ryan Haddad
Comment 8 2020-10-19 17:41:46 PDT
(In reply to Ryan Haddad from comment #7) > (In reply to Ryan Haddad from comment #4) > > inspector/debugger/breakpoint-resolve-when-script-added.html, added with > > this change, is frequently timing out on macOS debug bots. > > > > https://results.webkit.org/?suite=layout- > > tests&test=inspector%2Fdebugger%2Fbreakpoint-resolve-when-script-added.html > My statement was incorrect, this is also affecting release bots. > > Devin, can you investigate this urgently or should we revert for now? Tracking with https://bugs.webkit.org/show_bug.cgi?id=217934
Note You need to log in before you can comment on or make changes to this bug.