Web Inspector: REGRESSION(r266074): line-based JavaScript breakpoints don't hit after reload https://bugs.webkit.org/show_bug.cgi?id=217862

Reviewed by Timothy Hatcher.

Source/JavaScriptCore:

* inspector/agents/InspectorDebuggerAgent.cpp:
(Inspector::InspectorDebuggerAgent::clearDebuggerBreakpointState):
Don't clear the list of protocol breakpoints when the global object changes. Protocol
breakpoints should only be cleared when individually removed or by `Debugger.disable`.

LayoutTests:

* inspector/debugger/resources/nested-calls.js: Added.
(inner):
(outer):

* inspector/debugger/breakpoint-resolve-when-script-added.html: Added.
* inspector/debugger/breakpoint-resolve-when-script-added-expected.txt: Added.


Canonical link: https://commits.webkit.org/230587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268629 268f45cc-cd09-0410-ab3c-d52691b4dbfc