LayoutTests/inspector/debugger/resources/nested-calls.js
@@ -1,0 +1,10 @@
+function inner() {
+    let x = 42;
+    return x;
+}
+
+function outer() {
+    inner();
+}
+
+outer();
